Add utilities for markdown renderer

--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "esbuild-plugin-copy": "^2.1.0",
     "eventsource-parser": "^0.1.0",
     "franc": "^6.1.0",
+    "github-markdown-css": "^5.2.0",
     "guesslanguage-ng": "^0.0.2",
+    "highlight.js": "^11.7.0",
     "hotkeys-js": "^3.10.1",
     "i18next": "^22.4.11",
     "i18next-browser-languagedetector": "^7.0.1",
@@ -49,6 +51,8 @@
     "jss-preset-default": "^10.10.0",
     "languagedetect": "^2.0.0",
     "lru-cache": "^8.0.0",
+    "markdown-it": "^13.0.1",
+    "markdown-it-highlightjs": "^4.0.1",
     "rc-field-form": "^1.27.4",
     "react": "^18.0.1",
     "react-copy-to-clipboard": "^5.1.0",
