add inline css for popup window

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,39 +1,45 @@
 {
     "manifest_version": 3,
-
     "name": "OpenAI Translator",
     "description": "OpenAI-Translator is a Chrome extension that uses the ChatGPT API for translation.",
     "version": "0.1.0",
-
     "icons": {
         "16": "icon.png",
         "32": "icon.png",
         "48": "icon.png",
         "128": "icon.png"
     },
-
     "options_ui": {
         "page": "options.html"
     },
-
     "action": {
         "default_icon": "icon.png",
         "default_popup": "popup.html"
     },
-
     "content_scripts": [
         {
-            "matches": ["<all_urls>"],
+            "matches": [
+                "<all_urls>"
+            ],
             "all_frames": true,
-            "js": ["js/content_script.js"]
+            "js": [
+                "js/content_script.js"
+            ],
+            "css": [
+                "css/content_script.css"
+            ]
         }
     ],
-
     "background": {
         "service_worker": "js/background.js"
     },
-
-    "permissions": ["storage", "tts", "contextMenus"],
-
-    "host_permissions": ["https://*.openai.com/", "https://*.openai.azure.com/"]
+    "permissions": [
+        "storage",
+        "tts",
+        "contextMenus"
+    ],
+    "host_permissions": [
+        "https://*.openai.com/",
+        "https://*.openai.azure.com/"
+    ]
 }
