update manifest with new name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
-    "name": "OpenAI Translator",
-    "description": "OpenAI-Translator is a Chrome extension that uses the ChatGPT API for translation.",
+    "name": "OpenAI General",
+    "description": "OpenAI General, a fork from openai-translator for general purpose applications",
     "version": "0.1.0",
     "icons": {
         "16": "icon.png",
